# CNM_CycNucMed

./: Copy_of_exam (1).ipynb  EMBA_Exam.ipynb  README.md  pyproject.toml  requirements.txt
data/raw/: iaea_cyclotrons_raw.csv
notebooks/: exploration.ipynb
scripts/: cyclotron_run.py  run.py  run_full.py  run_one.py
src/iaea_project/: __init__.py  analysis.py  async_utils.py  cleaning.py  llm_adapter.py  pdf_report.py  pipeline.py  plotting.py  run.py  scraper.py  utils.py  web_enrichment.py
tests/: test_cleaning.py
