[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iaea-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "country_converter",
  "pandas",
  "geopy>=2.3.0",
  "playwright",
  "nest_asyncio",
  # add the rest you use...
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
iaea-project = "iaea_project.run:run"
